--- a/forms.css
+++ b/forms.css
@@ -6,13 +6,25 @@ form {
      
   }
   
-  input:disabled[type=text] {
+  input[type=text] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-    border: 2px solid red;
+    border: 2px solid black;
     border-radius: 4px;
+    background-color: #3CBC8D;
+    color: white;
+  }
+
+  input[type=button], input[type=submit], input[type=reset] {
+    background-color:  #3CBC8D;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
   }
 
 
