--- a/forms.css
+++ b/forms.css
@@ -5,7 +5,10 @@ form {
     border: 3px solid #eaeaea;
      
   }
-  
+  input:invalid {
+    border:2px solid red;
+  }
+   
   input[type=text] {
     width: 100%;
     padding: 12px 20px;
